viewer: added word break to prevent horizontall scrollbar

--- a/resources/public/css/main.scss
+++ b/resources/public/css/main.scss
@@ -553,6 +553,8 @@ div.modal {
     //required for firefox to show scrollbar in parent div
     height: 30px;
     min-height: 31px;
+
+    word-wrap: break-word;
   }
 }
 
